hphp/hack/test/extracted_from_manual/10-types/80-case-types-05.hack
// @generated by hh_manual from manual/hack/10-types/80-case-types.md
// @codegen-command : buck run fbcode//hphp/hack/src/hh_manual:hh_manual extract fbcode/hphp/hack/manual/hack/
case type CT_Bounded as arraykey = int;
case type CT_No_Bounds = int;

function expect_int(int $x): void {}
function expect_arraykey(arraykey $x): void {}
function expect_mixed(mixed $x): void {}

function test(CT_Bounded $bounded, CT_No_Bounds $unbounded): void {
  expect_int($bounded);       // ERROR: arraykey </: int
  expect_arraykey($bounded);  // OK: arraykey <: arraykey
  expect_mixed($bounded);     // OK: arraykey <: mixed

  expect_int($unbounded);     // ERROR: mixed </: int
  expect_arraykey($unbounded);// ERROR: mixed </: arraykey
  expect_mixed($unbounded);   // OK: mixed <: mixed
}
